[gd_scene load_steps=16 format=3 uid="uid://da7d6feu85ukm"]

[ext_resource type="PackedScene" uid="uid://dolr760n0vwqb" path="res://GameObjects/landTile.tscn" id="1_8lg7o"]
[ext_resource type="PackedScene" uid="uid://dpsflu7iy0js2" path="res://GameObjects/herderTile.tscn" id="2_inod7"]
[ext_resource type="PackedScene" uid="uid://cfnk63kvi2u0s" path="res://GameObjects/tailorTile.tscn" id="3_sghvc"]
[ext_resource type="PackedScene" uid="uid://u3vxom2jafmf" path="res://GameObjects/marketTile.tscn" id="4_ygbv5"]
[ext_resource type="PackedScene" uid="uid://j3dgj4shjr5f" path="res://GameObjects/cow.tscn" id="5_6avmm"]
[ext_resource type="Script" path="res://Scripts/AnimalControl.gd" id="5_m08yc"]
[ext_resource type="PackedScene" uid="uid://bipfpp25n2cba" path="res://GameObjects/family.tscn" id="8_udbte"]
[ext_resource type="Script" path="res://Scripts/MainFamily.gd" id="9_xtlcf"]
[ext_resource type="Script" path="res://Scripts/WorkerMovement.gd" id="10_paj6u"]
[ext_resource type="Script" path="res://Scripts/Trade.gd" id="11_e46qm"]
[ext_resource type="Script" path="res://Scripts/FamilyStageManagement.gd" id="11_i8m75"]
[ext_resource type="Script" path="res://Scripts/Produce.gd" id="12_8bxro"]
[ext_resource type="Script" path="res://Scripts/FamilySupportFunctions.gd" id="12_x0jf5"]
[ext_resource type="Script" path="res://Scripts/Consume.gd" id="13_ojphd"]
[ext_resource type="Script" path="res://Scripts/Buy.gd" id="14_5o6xl"]

[node name="GameScene" type="Node2D"]

[node name="LandNodes" type="Node" parent="."]

[node name="LandTile" parent="LandNodes" instance=ExtResource("1_8lg7o")]

[node name="HerderTile" parent="LandNodes/LandTile" instance=ExtResource("2_inod7")]

[node name="LandTile2" parent="LandNodes" instance=ExtResource("1_8lg7o")]
position = Vector2(320, 0)

[node name="TailorTile" parent="LandNodes/LandTile2" instance=ExtResource("3_sghvc")]

[node name="LandTile3" parent="LandNodes" instance=ExtResource("1_8lg7o")]
position = Vector2(640, 0)

[node name="LandTile4" parent="LandNodes" instance=ExtResource("1_8lg7o")]
position = Vector2(0, 320)

[node name="HerderTile" parent="LandNodes/LandTile4" instance=ExtResource("2_inod7")]

[node name="LandTile5" parent="LandNodes" instance=ExtResource("1_8lg7o")]
position = Vector2(320, 320)

[node name="MarketTile" parent="LandNodes/LandTile5" instance=ExtResource("4_ygbv5")]

[node name="LandTile6" parent="LandNodes" instance=ExtResource("1_8lg7o")]
position = Vector2(640, 320)

[node name="TailorTile" parent="LandNodes/LandTile6" instance=ExtResource("3_sghvc")]

[node name="LandTile7" parent="LandNodes" instance=ExtResource("1_8lg7o")]
position = Vector2(0, 640)

[node name="LandTile8" parent="LandNodes" instance=ExtResource("1_8lg7o")]
position = Vector2(320, 640)

[node name="LandTile9" parent="LandNodes" instance=ExtResource("1_8lg7o")]
position = Vector2(640, 640)

[node name="LandTile10" parent="LandNodes" instance=ExtResource("1_8lg7o")]
position = Vector2(960, 0)

[node name="LandTile11" parent="LandNodes" instance=ExtResource("1_8lg7o")]
position = Vector2(960, 320)

[node name="LandTile12" parent="LandNodes" instance=ExtResource("1_8lg7o")]
position = Vector2(960, 640)

[node name="AnimalNodes" type="Node" parent="."]
script = ExtResource("5_m08yc")

[node name="Cow" parent="AnimalNodes" instance=ExtResource("5_6avmm")]
position = Vector2(56, 64)

[node name="Cow2" parent="AnimalNodes" instance=ExtResource("5_6avmm")]
position = Vector2(40, 120)

[node name="Cow3" parent="AnimalNodes" instance=ExtResource("5_6avmm")]
position = Vector2(32, 368)

[node name="Cow4" parent="AnimalNodes" instance=ExtResource("5_6avmm")]
position = Vector2(64, 408)

[node name="FamilyNodes" type="Node" parent="."]

[node name="Family" parent="FamilyNodes" instance=ExtResource("8_udbte")]
position = Vector2(160, 69)
familyProfession = 1
cows = 2

[node name="Family2" parent="FamilyNodes" instance=ExtResource("8_udbte")]
position = Vector2(400, 93)
familyProfession = 2
leather = 10

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ControlScripts" type="Node" parent="."]

[node name="MainFamilyScript" type="Node" parent="ControlScripts"]
script = ExtResource("9_xtlcf")

[node name="WorkerMovement" type="Node" parent="ControlScripts/MainFamilyScript"]
script = ExtResource("10_paj6u")

[node name="FamilyStageManagment" type="Node" parent="ControlScripts/MainFamilyScript"]
script = ExtResource("11_i8m75")

[node name="Trade" type="Node" parent="ControlScripts/MainFamilyScript/FamilyStageManagment"]
script = ExtResource("11_e46qm")
tradeTilePosition = Vector2(360, 420)

[node name="Produce" type="Node" parent="ControlScripts/MainFamilyScript/FamilyStageManagment"]
script = ExtResource("12_8bxro")

[node name="Consume" type="Node" parent="ControlScripts/MainFamilyScript/FamilyStageManagment"]
script = ExtResource("13_ojphd")

[node name="Buy" type="Node" parent="ControlScripts/MainFamilyScript/FamilyStageManagment"]
script = ExtResource("14_5o6xl")

[node name="FamilySupportFunctions" type="Node" parent="ControlScripts/MainFamilyScript"]
script = ExtResource("12_x0jf5")

[connection signal="timeout" from="Timer" to="FamilyNodes" method="_on_timer_timeout"]
